finalize project